# com-jmf-python-pet-adoption

./: .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  init.sql  main.py  petadoption.db  pyproject.toml  requirements.txt
.githooks/: commit-msg
app/: config.py
app/models/: adoption.py  animal_type.py  breed.py  config.py  log.py  permission.py  pet.py  tag.py  user.py
app/routers/: adoption.py  animal_type.py  auth.py  config.py  log.py  pet.py  profile.py
app/schemas/: adoption.py  animal_type.py  config.py  log.py  pet.py  profile.py  user.py
app/utils/: fastlog.py  hashing.py  jwt.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
