[project]
name = "PetAdoption"
version = "0.1.0"
authors = [
  {name = "Jonathan Mojica Fernandez", email = "jonathanmojicafernandez@gmail.com"}
]
description = "This is the project of pet adoption free"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic = { extras = ["email"], version = "^2.10.6" }
mysql-connector-python = "^9.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
bcrypt = "^4.0.1"
python-multipart = "^0.0.20"

[tool.setuptools.packages.find]
include = ["app*", "uploads*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"